# r2r2r

./: README.md  pyproject.toml
data/assets/object_scans/coffee_maker/: .asset_hash  config.yaml
data/assets/object_scans/drill/: .asset_hash  12_9_2024.mtl  config.yaml  drill.usd
data/assets/object_scans/mug/: .asset_hash  config.yaml
data/assets/object_scans/stapler/: .asset_hash  config.yaml  joint_offsets.json  object.urdf  object_fix_base.usd  object_instanceable.usd  part_poses.json  textured_mesh_0.mtl  textured_mesh_1.mtl  textured_mesh_2.mtl  textured_mesh_3.mtl
data/assets/room_scans/12_14_2024/: .asset_hash  12_14_2024.mtl  12_14_2024.usd  config.yaml
data/brio_info/: BRIO.stl  cam2world.tf  camera_calibration.npz  camera_intr.intr
data/yumi/: .asset_hash  config.yaml
data/yumi_compliant_gripper/: .asset_hash  config.yaml
data/yumi_description/meshes/gripper/: yumi_finray_finger.mtl
data/yumi_description/meshes_textured/link_1/: link_1.mtl
data/yumi_description/urdf/: yumi.urdf  yumi_fix.urdf  yumi_servo_gripper.urdf  yumi_textured.urdf  yumi_textured_fix.urdf
data/yumi_new/: .asset_hash  config.yaml
scripts/: process_data.ipynb  run.py  to_zarr_dataset.py
test/: pyrender_urdf_vis.py  test_pyrender.py  urdf.py  urdf_depth.py  urdf_ker.py  viser_view_ply.py
xi/gaussian_render/: batchplyrenderer_example.py
xi/isaaclab_viser/: base.py  camera_manager.py
xi/isaaclab_viser/controllers/: jaxmp_diff_ik_controller.py
xi/isaaclab_viser/yumi_simulators/: yumi_coffee_maker.py  yumi_led_light.py
xi/utils/: mesh_reorient.py  np_to_h5.py
(+24 files in other folders)
