[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xi"
version = "0.0.1"
description = "Robot data generation from human hand demos"
authors = [
    {name = "Justin Yu", email = "yujustin@berkeley.edu"},
]
license = {text = "MIT Software License"}
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "numpy==1.26.4",
    "viser",
    "tyro",
]

[tool.setuptools.packages.find]
exclude = ["catkin_ws*"]
